# faros-server

./: .gitignore  pyproject.toml
docs/: curl_test_commands.html  curl_test_commands.md
scripts/: curl_test.sh
src/faros_server/: __init__.py  app.py  config.py  db.py
src/faros_server/auth/: deps.py  jwt.py  oauth.py
src/faros_server/clients/: google_oauth_client.py
src/faros_server/config/: __init__.py  loader.py  settings.py
src/faros_server/config/dev/: settings.yaml
src/faros_server/config/prod/: settings.yaml
src/faros_server/controllers/: agent.py  agent_api.py  auth.py  device_page.py  health.py  ws.py
src/faros_server/dao/: agent_dao.py  anomaly_dao.py  command_dao.py  event_dao.py  user_dao.py
src/faros_server/models/: __init__.py  agent.py  command.py  event.py  user.py
src/faros_server/plugins/: __init__.py  db_anomaly.py  db_event.py  db_heartbeat.py  event.py  heartbeat.py
src/faros_server/plugins/contracts/: __init__.py  anomaly.py
src/faros_server/resources/: agent.py  auth.py  health.py
src/faros_server/routers/: auth.py  health.py  ws.py
src/faros_server/schemas/: user.py
src/faros_server/services/: agent_service.py  anomaly_service.py  command_service.py  event_service.py  user_service.py
src/faros_server/templates/: __init__.py  already_registered.html  approval.html  base.html  denied.html  error.html
src/faros_server/utils/: crypto.py  db.py  jwt.py  oauth.py  time.py
tests/: conftest.py  test_agent.py  test_auth.py  test_cli.py  test_commands.py  test_config.py  test_db.py  test_google_oauth_client.py  test_health.py  test_oauth.py  test_ws.py
