[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faros-server"
version = "0.1.0"
description = "Faros server — API server for edge agent management"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "litestar[standard]>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-python-jose>=3.3",
    "types-PyYAML>=6.0",
]

[project.scripts]
faros-server = "faros_server.app:cli_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["faros_server"]
concurrency = ["greenlet", "thread"]
omit = ["src/faros_server/app.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
strict = true
packages = ["faros_server"]
mypy_path = "src"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific
    "T20",  # flake8-print
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"src/faros_server/app.py" = ["T20"]
